FIX: Sol bugs + JDK 17